[tool.poetry]
name = "dog-bed-database"
version = "0.1.0"
description = ""
authors = ["arthurpieri <git@arthurpieri.com>"]
readme = "README.md"
packages = [{include = "dog_bed_database"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
